data/derived/comb/progs/unify/prog8692.ml.out
Characters 68-79:
  | h::t ->  (explode w);;
             ^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type bool
